html and css update

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         <span>London, United Kingdom</span>
         <p>"Front-end developer and avid reader."</p>
 
-        <button class="buttonStyle">GitHub</button>
-        <button class="buttonStyle">Frontend Mentor</button>
-        <button class="buttonStyle">LinkedIn</button>
-        <button class="buttonStyle">Twitter</button>
-        <button class="buttonStyle">Instagram</button>
+        <a href="https://github.com/" class="linkStyle">GitHub</a>
+        <a href="https://www.frontendmentor.io/" class="linkStyle">Frontend Mentor</a>
+        <a href="https://www.linkedin.com/" class="linkStyle">LinkedIn</a>
+        <a href="https://x.com/" class="linkStyle">Twitter</a>
+        <a href="https://www.instagram.com//" class="linkStyle">Instagram</a>
 
     </div>
   
