--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         <span>London, United Kingdom</span>
         <p>"Front-end developer and avid reader."</p>
 
-        <a href="https://github.com/" class="linkStyle">GitHub</a>
-        <a href="https://www.frontendmentor.io/" class="linkStyle">Frontend Mentor</a>
-        <a href="https://www.linkedin.com/" class="linkStyle">LinkedIn</a>
-        <a href="https://x.com/" class="linkStyle">Twitter</a>
-        <a href="https://www.instagram.com//" class="linkStyle">Instagram</a>
+        <a href="https://github.com/" class="linkStyle" target="_blank" rel="nooperner noreferrer">GitHub</a>
+        <a href="https://www.frontendmentor.io/" class="linkStyle" rel="nooperner noreferrer">Frontend Mentor</a>
+        <a href="https://www.linkedin.com/" class="linkStyle" rel="nooperner noreferrer">LinkedIn</a>
+        <a href="https://x.com/" class="linkStyle" rel="nooperner noreferrer">Twitter</a>
+        <a href="https://www.instagram.com//" class="linkStyle" rel="nooperner noreferrer">Instagram</a>
 
     </div>
   
